Fix spacing in about me

--- a/css/style.css
+++ b/css/style.css
@@ -22,15 +22,6 @@ blockquote p {
     font-size: 1.5em;
 }
 
-/*  */
-ul.py-0 {
-    display: block;
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
-    margin-top: 0 !important;
-    margin-bottom: 0 !important;
-    color: blue;
-}
 
 /* Masthead */
 .header, .footer, .header {
